# cork-

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  cork_interface.hh
src/: CMakeCache.txt  cork.h
src/tetgen/: tetgen.h  tetgen_interface.hh
src_cork/: CMakeLists.txt  cork.cpp  cork.hh  cork_interface.cc  cork_interface.hh  main.cpp
src_cork/accel/: aabvh.h
src_cork/file_formats/: files.cpp  files.h  ifs.cpp  off.cpp
src_cork/include/: cork.hh
src_cork/isct/: absext4.h  empty3d.cpp  empty3d.h  ext4.h  fixext4.h  fixint.h  gmpext4.h  quantization.cpp  quantization.h  triangle.cc  triangle.hh  unsafeRayTriIsct.h
src_cork/math/: bbox.h  ray.h  vec.h
src_cork/mesh/: mesh.bool.tpp  mesh.decl.h  mesh.isct.tpp  mesh.remesh.tpp  mesh.topoCache.tpp  mesh.tpp
src_cork/mpir-generic/: CMakeLists.txt  mpir.h
src_cork/rawmesh/: rawMesh.h  rawMesh.tpp
src_cork/tetgen/: CMakeLists.txt  predicates.cxx  tetgen.cc  tetgen.hh  tetgen_interface.cc  tetgen_interface.hh
src_cork/util/: iterPool.h  log.cpp  memPool.h  prelude.h  shortVec.h  timer.cpp  unionFind.h
tetgen/: tetgen.cxx  tetgen_interface.cc
